# GLplayground

./: .gitignore  CMakeLists.txt  Debug-linux.cap  Debug.cap  GLplayground.kdev4  README.md  fragment.glsl  graphene.cpp  graphene.h  graphene_shader.cpp  main.c  main.cpp  osd-frag.glsl  osd-geom.glsl  packages.config  tesscontrol.glsl  vertex.glsl
Graphene/: blinn.cpp  blinn.h  bumped.cpp  bumped.h  camera.cpp  camera.h  graphene.cpp  graphene.h  graphene_types.h  light.cpp  light.h  material.cpp  material.h  model.cpp  model.h  object.cpp  object.h  osd.cpp  osd.h  program.cpp  program.h  scene.cpp  scene.h  shader.cpp  shader.h  simpleobjects.cpp  simpleobjects.h  texture.cpp  texture.h
Shaders/: blinn.fragment.glsl  blinn.vertex.glsl  bumped.fragment.glsl  default.fragment.glsl  default.vertex.glsl
